--- a/layers.css
+++ b/layers.css
@@ -1,7 +1,63 @@
-
+#header{
+    background-color: rgba(0, 128, 0, 0.507);
+    display: flex;
+    padding: 0px;
+    margin: 0px;
+    align-items: center;
+    text-align: right;
+    position: fixed;    
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+        
+}
 a{
+    color:white;
+    font-size: 35px;
+    height: 30px;
+    width: 60px;
+    padding:50px 40px;
     text-decoration:none;
+    align-items:center;    
+    justify-content: space-between;
+    column-gap: 75px;
+    padding: 5px;
+    cursor: pointer;
+}
+a:hover{
+    font-size: 24px;
+}
+
+button{
+    color: black;
+    background-color:rgba(24, 179, 24, 0.83);
+    justify-content:space-evenly;
+    font-size: 22px;
+    height: 42px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+button:hover{
+    background-color:rgba(185, 56, 5, 0.664);
+}
+
+#logo{
+    padding: 10px;
+    border-radius: 30%;
+}
+footer {
+
     color: white;
+    width: 100%;
+    height: 200px;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+
 }
 
 
