--- a/layers.css
+++ b/layers.css
@@ -1,5 +1,5 @@
 #header{
-    background-color: rgba(0, 128, 0, 0.507);
+    background-color: #78B9B5;
     display: flex;
     padding: 0px;
     margin: 0px;
