--- a/home.css
+++ b/home.css
@@ -1,3 +1,29 @@
+#header{
+    background-color: #78B9B5;
+    display: flex;
+    padding: 0px;
+    margin: 0px;
+    align-items: center;
+    text-align: right;
+    position: fixed;    
+    width: 100%;
+    align-items: center;
+    justify-content: space-between;
+        
+}
+a{
+    color:white;
+    font-size: 25px;
+    height: 30px;
+    width: 60px;
+    padding:50px 40px;
+    text-decoration:none;
+    align-items:center;    
+    justify-content: space-between;
+    column-gap: 75px;
+    padding: 5px;
+    cursor: pointer;
+}
 body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
