--- a/home.css
+++ b/home.css
@@ -135,4 +135,15 @@ body {
       .section-title h2 {
         font-size: 24px;
       }
-    }
+    footer {
+
+    color: white;
+    width: 100%;
+    height: 200px;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+
+}
